--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Chillpops" />
     
     <link href="https://fonts.googleapis.com/css2?family=Fredoka+One:wght@400&family=Nunito:wght@300;400;600;700;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/src/styles.css">
+    <link rel="stylesheet" href="styles.css">
     
     <meta property="og:title" content="Chillpops - Naturally Crafted Joy in Every Bite!" />
     <meta property="og:description" content="Premium artisan popsicles made with natural ingredients" />
@@ -565,6 +565,6 @@
       </div>
     </footer>
 
-    <script src="/src/script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
