completed the nav and hero section

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <li class="nav-item"><a href="#flavour" class="nav-link">Flavour</a></li>
                 <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
             </ul>
-            <div class="navbar-toggle">
+            <div class="navbar-toggle" aria-label="Toggle navigation menu">
                 <span class="bar"></span>
                 <span class="bar"></span>
                 <span class="bar"></span>
