all are fixed but not the floavour section scroll

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="video-background">
             <!-- Ensure correct video loading with preload attribute -->
             <video autoplay muted loop playsinline preload="auto" id="hero-video">
-                <source src="herobg.mp4" type="video/mp4">
+                <source src="heorbg2.webm" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
             <div class="video-overlay"></div>
