added some contact details

--- a/index.html
+++ b/index.html
@@ -251,9 +251,9 @@
                     <div class="contact-details">
                         <h3>Contact Information</h3>
                         <ul class="contact-list">
-                            <li><i class="contact-icon">📍</i> 123 Popsicle Lane, Freeze City, FC 12345</li>
-                            <li><i class="contact-icon">📞</i> (555) 123-4567</li>
-                            <li><i class="contact-icon">✉️</i> hello@chillpops.com</li>
+                            <li><i class="contact-icon">📍</i> 123 Popsicle , abc City, FC 12345</li>
+                            <li><i class="contact-icon">📞</i> 8608677757</li>
+                            <li><i class="contact-icon">✉️</i> chillpopsofficial@gmail.com</li>
                         </ul>
                         
                         <h3>Business Hours</h3>
@@ -266,7 +266,7 @@
                         <div class="social-links">
                             <a href="#" class="social-link">Facebook</a>
                             <a href="#" class="social-link">Instagram</a>
-                            <a href="#" class="social-link">Twitter</a>
+                            <!-- <a href="#" class="social-link">Twitter</a> -->
                         </div>
                     </div>
                 </div>
